# skills-manager

./: .gitignore  LICENSE  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
openspec/changes/skills-manager-app/: design.md  proposal.md  tasks.md
openspec/changes/skills-manager-app/specs/editor-detection/: spec.md
openspec/changes/skills-manager-app/specs/editor-filter/: spec.md
openspec/changes/skills-manager-app/specs/neumorphic-ui/: spec.md
openspec/changes/skills-manager-app/specs/skill-detail-view/: spec.md
openspec/changes/skills-manager-app/specs/skill-discovery/: spec.md
openspec/changes/skills-manager-app/specs/skill-toggle/: spec.md
openspec/changes/ui-enhancement-i18n/: .openspec.yaml  design.md  proposal.md  tasks.md
scripts/: generate-icons-from-png.mjs  generate-icons.mjs
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  editor.rs  lib.rs  platform.rs  skill.rs  toggle.rs
src/components/: AboutDialog.vue  AppLayout.vue  ConfirmDialog.vue  EditorFilter.vue  FileViewer.vue  NeuButton.vue  NeuCard.vue  NeuSelect.vue  NeuTag.vue  NeuToggle.vue  SettingsDialog.vue  SkillDetail.vue  SkillFileTree.vue  SkillList.vue  SkillListItem.vue  StatusFilter.vue
src/composables/: useEditorFilter.ts  useSkillEditor.ts  useSkillFiles.ts  useSkillToggle.ts  useSkills.ts
src/i18n/: en.ts  index.ts  zh-CN.ts
src/styles/: neumorphic.css
src/types/: index.ts
